--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,55 +1,63 @@
-.nav-item.active {
-    color: white;
-    background-color: #0d6efd;
-  }
+
+
+/* .nav-item.active {
+  color: white;
+  background-color: #0d6efd;
+} */
+
 
 .icon-blue{
-  color: #0d6efd;
+color: #39a4d8  ;
 }
+
 
 /* adjust search field */
 .search-field .input-group-text {
-    background-color: transparent;
-    border-right: none;
-    border-radius: 20px;
-  }
+  background-color: white;
+  border-right-color: transparent;
+  border-radius: 20px;
+}
 
 .search-field .form-control {
   border-radius: 20px;
-  border-left: none;
+  border-left-color: transparent;
 }
 
 
 .no-padding{
-  padding-left: 0;
-  padding-right: 0;
+padding-left: 0;
+padding-right: 0;
 
 }
 
 .post-title {
-  font-size: 35px;
-  font-weight: bold;
-  color: white;
+font-size: 35px;
+font-weight: bold;
+color: rgb(34,34,34);
 }
 
 .post-image {  
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width:80px;
-  height: 80px;
+margin-top: 10px;
+margin-bottom: 10px;
+width:70px;
+height: 70px;
 }
 
 .sidebar-image {
-  width:45px;
-  height: 45px;
+width:45px;
+height: 45px;
 }
 
 /* text with image as background */
 /* parent div is position-relative */
 /* style for the text */
 .content {
-  position: absolute;
-  left: 1%;
-  bottom: 5px;
-  text-align: center;
+position: absolute;
+left: 1%;
+bottom: 5px;
+text-align: center;
 }
+
+/* .wd-bg-light-grey{
+  background-color: rgb(34,34,34);
+} */
