--- a/public/tuiter/ExploreScreen/index.css
+++ b/public/tuiter/ExploreScreen/index.css
@@ -1,9 +1,9 @@
 
 
-/* .nav-item.active {
-  color: white;
-  background-color: #0d6efd;
-} */
+a:active {
+  color: green;
+  background-color: yellow;
+}
 
 
 .icon-blue{
